# python_pkg_template

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/docs/: index.md
